﻿RELEASE HISTORY

15/04/2015 1.00 beta rev 484-git1
    - Fixed MQTT app: it was missing reconnection when disconnected from MQTT server
    - Deprecated Weeco 4M board interface driver as built-in (now available as importable interface driver)
    - Added importable MIG interface driver plugins
    - Added "configlets" files for implementing custom interface drivers UI

29/03/2015 1.00 beta rev 484
    - Improved trigger condition reaction time in all type of programs/scripts (now real time, event based)
    - Added Program.WithAddress (get reference to a program) and Program.WaitFor (wait for a program to run) to Program helper class
    - Added Program.Say (voice output) and Program.Play (play wav sound) to Wizard Script HomeGenie/Automation commands
    - Some fixes to Virtual Modules lifecycle
    - Added MCP3008 Numeric Keypad automation program (connect a 3x4 numeric keypad using just one analog channel)
    - Updated SSD1306 Oled, DHT-11 and DHT-22 programs
    - Improved MCP3008 program with Web API
    - Added GetValue method to ModulesManager: execute a module command and gets the return value as result (can be used for interprocess communication)
    - Added database index as suggested by issue #150

20/03/2015 1.00 beta rev 483-git2
    - Updated raspberrysharp-io library to latest release
    - Fixed Program.Say bug with accented characters
    - Added ZWaveLib Crc16Encapsulated decoding support + some more ZWaveLib rework (PR #146 #147 #148)

10/03/2015 1.00 beta rev 483-git1
    - Added runtime errors debugging for C#, Ruby, Python programs
    - Added Polish locale files

08/03/2015 1.00 beta rev 483
    - Updated Jint (javascript engine) to latest version
    - Applied alternative solution for issue #138 / pull request #141
    - Fixed device type retain for virtual modules
    - Added X10 Firecracker Modules app
    - Fixed missing resource releasing on stop for phyton/ruby/js programs
    - Fixed W800RF32 port selection issue
